# Network_Module_Visualization

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
data/: edges-MODULE_salmon.txt  nodes-MODULE_salmon.txt
src/network_viz/: __init__.py  app.py  cli.py  core.py  plotting.py  reports.py
